fix an ussue where hr element created a gap between sections

--- a/src/sass/base/_utilities.scss
+++ b/src/sass/base/_utilities.scss
@@ -10,6 +10,10 @@
     margin-bottom: 2rem;
 }
 
+.u-margin-top-small {
+    margin-top: 2rem;
+}
+
 .u-padding-bottom-small {
     padding-bottom: 2rem;
 }
