--- a/src/sass/pages/_details.scss
+++ b/src/sass/pages/_details.scss
@@ -1,6 +1,6 @@
 .details {
     background-color: $color-primary-medium;
-    padding: 2rem 0;
+    padding-top: 2rem;
 }
 
 .giveaway {
